fix(core): fix spotPrice service
- added rounding of two to prices
- added highest and lowest price to get response
- added tests for new functionality
- moved docker-compose back to docker folder
